--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
